# XML_parser

./: CMakeLists.txt  README.md  conanfile.txt  main.cpp  randomXML_file.xml
lib/: CMakeLists.txt  DOBVisitor.cpp  Factories.cpp  Parser.cpp  SteamSink.cpp  SteamSource.cpp  StringSink.cpp  StringSource.cpp  XMLobj.cpp  chVisitor.cpp
lib/Interfaces/: DOBVisitor.h  DecoratorParser.h  DecoratorSink.h  DecoratorSource.h  DecoratorVisitor.h  Factories.h  Parser.h  ParserIntf.h  Sink.h  Source.h  SteamSink.h  SteamSource.h  StringSink.h  StringSource.h  Visitor.h  XMLobj.h  chVisitor.h
tests/: CMakeLists.txt  ParserTest.cpp  VisitorTest.cpp
